# dronic

./: .gitignore  PROJECT_CONTEXT.txt
backend/: db.py  main.py  migrate_financial.py  migrate_void.py  models.py  pyproject.toml  schemas.py
frontend/: index.html  package-lock.json  package.json  replit.md  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Sidebar.css  Sidebar.tsx  StatCard.css  StatCard.tsx
frontend/src/pages/: Alerts.tsx  Dashboard.css  Dashboard.tsx  Fleet.tsx  Operations.tsx  Page.css  ServiceOrderDetailPage.tsx  ServiceOrdersPage.tsx  Settings.css  Settings.tsx
frontend/src/services/: admin.ts  api.ts  assets.ts  clients.ts  orderExpenses.ts  paymentEvents.ts  serviceOrders.ts
frontend/src/types/: asset.ts  orderExpense.ts  paymentEvent.ts  serviceOrder.ts
