[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = [
  { name = "Agustin Sosa", email = "joseagustinsosa@gmail.com" }
]
requires-python = ">=3.11"
dependencies = ["fastapi",
"uvicorn",
"sqlalchemy",
"pydantic",
"python-multipart"]

[tool.setuptools]
py-modules = ["main", "db", "models", "schemas", "migrate_financial", "migrate_void"]
